update code to upload in small chucks without ever loading the complete instant into memory